tests/fail/test-neg-not-return.ctds
integer main(){
  integer a;
  a=0;
}